# websearch-agent

./: .gitignore  README.md  pyproject.toml  query_db.db
.github/workflows/: lint-format.yaml
latest_logs/threading.line_1032/: basic_test_info.txt
scripts/: lint.sh
src/websearch/: __init__.py  graph.ipynb  graph.py  iocache.py  modelcontext.py  prompts.py  query.py  root_logger.py  state.py
src/websearch/agents/: chunkanalyzer.py  explorer.py  linkfinder.py  linknav.py  querygen.py  syntetizer.py
src/websearch/database/: client.py
src/websearch/nodes/: __init__.py  chunkanalyzer.py  explorer.py  linknav.py  linksfinder.py  querygen.py  syntetizer.py
src/websearch/tools/: __init__.py  navigatelinks.py  searchlinks.py  websearch.py
src/websearch/tools/bravesearch/: client.py
test/: agent_test.py
