[project]
name = "websearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "grequests>=0.7.0",
    "langgraph>=0.3.21",
    "playwright>=1.51.0",
    "pydantic-ai>=0.0.46",
    "pydantic-settings>=2.8.1",
    "pymilvus[model]>=2.5.6",
    "requests>=2.32.3",
    "seleniumbase>=4.36.4",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
]
